chore: replace deprecated url matching method